--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Blue Hills Explorer by Mike Dezube</title>
+  <title>Blue Hills 3D Explorer by Mike Dezube</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <base target="_blank">
   <link rel="stylesheet" type="text/css" href="./Qgis2threejs.css">
